getAll() 불변 리스트 반환